Changed browser and app icon

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
     <title>Brendon Dalaba - Creative Technologist Portfolio</title>
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <meta name="description" content="Creative Technologist designing and building digital experiences using a blend of code, creativity, and AI. View my projects and get in touch for collaboration opportunities." />
     
     <!-- Open Graph tags -->
